# joboco

docs/: schema.dot  schema.md
joboco.lib/: .gitignore  pyproject.toml  task.py
joboco.lib/src/joboco/lib/: __init__.py  api.py  container.py  context.py  event.py  job.py  registry.py  scheduler.py  trigger.py
joboco.web/: pyproject.toml  setup.cfg
joboco.web/example/: Makefile  gate.Dockerfile  main.py  task1.Dockerfile  task2.Dockerfile  task3.Dockerfile
joboco.web/src/joboco/web/: __init__.py  task.py
